<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="photo">图片</string>
    <string name="music">音乐</string>
    <string name="alarm">闹钟</string>
    <string name="app_name">应用商店</string>
    <string name="message">信息</string>
    <string name="setting">设置</string>
    <string name="system_input">安全  输入法  浏览器 字体  系统  优化  加密  </string>
    <string name="chat_tool">聊天  微薄  交友  社交  通讯录  通话  语音  短信  表情  婚恋  来电秀  </string>
    <string name="video_img">视频  音乐  播放器  拍照  相机  美化  滤镜  特效  自拍  拼图  电影  </string>
    <string name="read_study">图书  新闻  漫画  阅读器  小说  听书  杂志  学习  翻译  考试  英语  </string>
    <string name="life_map">天气  日历  地图  导航  旅游  购物  美食  团购  ktv 闹钟  段子  </string>
    <string name="theme">主题  桌面  壁纸  动态  锁屏  iphone 美女  卡通  风景  可爱  小清新  </string>
    <string name="chuxing">旅游  机票  酒店  火车票  导航  地图  天气  </string>
    <string name="shiyong_tool">闹钟  计算器  手电筒  指南针  翻译  倒计时  快递  </string>
    <string name="office">效率办公  记事  理财  云盘  名片  文档  邮箱  </string>
    <string name="children">故事  儿歌  益智  育儿  怀孕  亲子  学前</string>
    <string name="game_gedou">KOF  街霸  侍魂  格斗之王  格斗兄弟  拳击挑战赛</string>
    <string name="game_xiuxian">植物大战僵尸  愤怒的小鸟  保卫家园   快乐牛牛</string>
    <string name="game_dongzuo">暗影格斗  生存战争  疯狂喷气机  火箭飞人</string>
    <string name="game_tiyu">手指网球  手指高尔夫  足球射门  全明星篮球赛 </string>
    <string name="game_wangluo">龙翼编年史  掌上英雄联盟  萌宠大乱斗  众将听令 </string>
    <string name="game_feixing">雷电2016  时空猎人  高达战争  雷电决战星河</string>
    <string name="game_qipai">皇冠麻将  QQ斗地主  博雅中国象棋  多乐跑得快  途游五子棋</string>
    <string name="game_juese">新征途  亡灵杀手  乱斗西游  去吧皮卡丘  少年三国志</string>
    <string name="game_baoli">死亡扳机2  变脸僵尸  雪饮狂刀  死亡空间  死亡绝境</string>
    <string name="game_paoku">神庙逃亡  地铁跑酷  险境逃脱  矢量跑酷  矿车大逃亡</string>
    <string name="game_mishi">上帝密室  最后一扇门  逃出房间  360度房间</string>
    <string name="game_linglei">越消越疯狂  混沌之理 大便超人  天天炫舞</string>
    <color name="white">#ffffff</color>
    <color name="black">#000000</color>

</resources>
